--- a/HW1_BasicGraph/HW1_GraphLab_Kite_Rnash.ipynb
+++ b/HW1_BasicGraph/HW1_GraphLab_Kite_Rnash.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Kite.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -41,10 +48,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 10 lines in 0.009921 secs.</pre>"
+       "<pre>Parsing completed. Parsed 10 lines in 0.022333 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 10 lines in 0.009921 secs."
+       "Parsing completed. Parsed 10 lines in 0.022333 secs."
       ]
      },
      "metadata": {},
@@ -78,10 +85,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 10 lines in 0.009303 secs.</pre>"
+       "<pre>Parsing completed. Parsed 10 lines in 0.008153 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 10 lines in 0.009303 secs."
+       "Parsing completed. Parsed 10 lines in 0.008153 secs."
       ]
      },
      "metadata": {},
@@ -102,10 +109,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 18 lines in 0.009013 secs.</pre>"
+       "<pre>Parsing completed. Parsed 18 lines in 0.00863 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 18 lines in 0.009013 secs."
+       "Parsing completed. Parsed 18 lines in 0.00863 secs."
       ]
      },
      "metadata": {},
@@ -139,10 +146,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 18 lines in 0.008834 secs.</pre>"
+       "<pre>Parsing completed. Parsed 18 lines in 0.008374 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 18 lines in 0.008834 secs."
+       "Parsing completed. Parsed 18 lines in 0.008374 secs."
       ]
      },
      "metadata": {},
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +218,7 @@
        "\n",
        "                require(['https://static.turi.com/products/graphlab-create/2.1/canvas/js/ipython_app.js'], function(IPythonApp){\n",
        "                    var app = new IPythonApp();\n",
-       "                    app.attachView('sgraph','View', {\"edges_labels\": null, \"selected_variable\": {\"name\": [\"g\"], \"view_file\": \"sgraph\", \"view_component\": \"View\", \"view_params\": {\"elabel_hover\": false, \"vertex_positions\": null, \"h_offset\": 0.0, \"node_size\": 300, \"ecolor\": [0.37, 0.33, 0.33], \"elabel\": null, \"arrows\": false, \"ewidth\": 1, \"vlabel\": \"id\", \"highlight_color\": [0.69, 0.0, 0.498], \"vcolor\": [0.522, 0.741, 0.0], \"vlabel_hover\": false, \"highlight\": {}, \"v_offset\": 0.03}, \"view_components\": [\"View\"], \"type\": \"SGraph\", \"descriptives_links\": {\"edges\": \"edges\", \"vertices\": \"vertices\"}, \"descriptives\": {\"edges\": 18, \"vertices\": 10}}, \"positions\": null, \"error_type\": 0, \"vertices\": [\"Beverly\", \"Fernando\", \"Diane\", \"Ed\", \"Jane\", \"Garth\", \"Andre\", \"Carol\", \"Heather\", \"Ike\"], \"vertices_labels\": [\"Beverly\", \"Fernando\", \"Diane\", \"Ed\", \"Jane\", \"Garth\", \"Andre\", \"Carol\", \"Heather\", \"Ike\"], \"edges\": [[\"Beverly\", \"Diane\"], [\"Fernando\", \"Diane\"], [\"Beverly\", \"Andre\"], [\"Ed\", \"Beverly\"], [\"Ed\", \"Diane\"], [\"Jane\", \"Ike\"], [\"Garth\", \"Beverly\"], [\"Garth\", \"Fernando\"], [\"Garth\", \"Ed\"], [\"Garth\", \"Diane\"], [\"Andre\", \"Fernando\"], [\"Andre\", \"Diane\"], [\"Andre\", \"Carol\"], [\"Carol\", \"Fernando\"], [\"Carol\", \"Diane\"], [\"Heather\", \"Fernando\"], [\"Heather\", \"Garth\"], [\"Ike\", \"Heather\"]], \"ipython\": true, \"error_msg\": \"\"}, e);\n",
+       "                    app.attachView('sgraph','View', {\"edges_labels\": null, \"selected_variable\": {\"name\": [\"g\"], \"view_file\": \"sgraph\", \"view_component\": \"View\", \"view_params\": {\"elabel_hover\": false, \"vertex_positions\": null, \"h_offset\": 0.0, \"node_size\": 300, \"ecolor\": [0.37, 0.33, 0.33], \"elabel\": null, \"arrows\": false, \"ewidth\": 1, \"vlabel\": \"id\", \"highlight_color\": [0.69, 0.0, 0.498], \"vcolor\": [0.522, 0.741, 0.0], \"vlabel_hover\": false, \"highlight\": {}, \"v_offset\": 0.03}, \"view_components\": [\"View\"], \"type\": \"SGraph\", \"descriptives_links\": {\"edges\": \"edges\", \"vertices\": \"vertices\"}, \"descriptives\": {\"edges\": 18, \"vertices\": 10}}, \"positions\": null, \"error_type\": 0, \"vertices\": [\"Beverly\", \"Fernando\", \"Diane\", \"Ed\", \"Jane\", \"Garth\", \"Andre\", \"Carol\", \"Heather\", \"Ike\"], \"vertices_labels\": [\"Beverly\", \"Fernando\", \"Diane\", \"Ed\", \"Jane\", \"Garth\", \"Andre\", \"Carol\", \"Heather\", \"Ike\"], \"edges\": [[\"Beverly\", \"Diane\"], [\"Fernando\", \"Diane\"], [\"Beverly\", \"Andre\"], [\"Ed\", \"Beverly\"], [\"Ed\", \"Diane\"], [\"Jane\", \"Ike\"], [\"Garth\", \"Fernando\"], [\"Garth\", \"Beverly\"], [\"Garth\", \"Diane\"], [\"Garth\", \"Ed\"], [\"Andre\", \"Fernando\"], [\"Andre\", \"Diane\"], [\"Andre\", \"Carol\"], [\"Carol\", \"Fernando\"], [\"Carol\", \"Diane\"], [\"Heather\", \"Fernando\"], [\"Heather\", \"Garth\"], [\"Ike\", \"Heather\"]], \"ipython\": true, \"error_msg\": \"\"}, e);\n",
        "                });\n",
        "            })();\n",
        "        "
